v. 1.5.5: Rebuild in progress
Main initialization

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             before: 'przed ',
             after: ' po'
         });
+        var o = $(test).data('jLetters');
+        console.log(o.getParams());
     </script>
 </body>
 
