--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    <div id="testDiv">Działa</div>
-    <div>Działa</div>
+    <div id="testDiv">Działa jak się patrzy</div>
     <script>
         $('#testDiv').jLetters();
         // var test = document.getElementById('testDiv');
