--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="testDiv">Działa jak się patrzy</div>
+    <div style="font-size: 40px" id="testDiv">Działa jak się patrzy</div>
     <script>
         $('#testDiv').jLetters();
         // var test = document.getElementById('testDiv');
